Fixed z-index left panel

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -94,7 +94,7 @@ $comment-section-bg: #333;
     left: 50px;
     width: 47%;
     background-color: $report-section-bg;
-    z-index: 9998;
+    z-index: 9996;
 
     &.ng-hide-remove {
         -moz-animation: fadeInLeft .5s .2s alternate forwards;
